# pulsar_data_collection

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  tart_end_decorator(func):
.github/worflows/: push.yaml
.github/workflows/: continuous-integration.yaml  dependabot.yaml  push.yaml  release.yaml
apollo/data_capture/: data_capture.py
apollo/db_connectors/postgreSQL/: db_connection.py
examples/chronoc_kidney_disease_project/: Disease Detection.ipynb  clean_data.csv
examples/kidney_disease_influxdb/: Dockerfile  create_table_smpl.sql  data_handling.ipynb  docker-compose.yaml  main.py  requirements.txt  test_data.csv  test_data_json.json  test_data_no_class.txt
examples/kidney_disease_influxdb/chronoc_kidney_disease_project/ml/data/: sqllite_func.py
examples/kidney_disease_influxdb/chronoc_kidney_disease_project/ml/model/: dataframe_create.py
examples/kidney_disease_prometheus/: Dockerfile  docker-compose.yaml  main.py
examples/kidney_disease_sqlite3/: Dockerfile  SQLite_Python.db  data_handling.ipynb  docker-compose.yaml  main.py
examples/model_serving_chronic_kidney_disease/: SQLite_Python.db  data_handling.ipynb  decorators.py  kidney_disease.pkl  main.py  predict_script.py  test_4jul_data.csv  test_data.csv  test_data_json.csv  test_data_json.json  test_data_json_no_class.json  test_data_no_class.csv
examples/model_serving_chronic_kidney_disease/Chronic Kidney Disease Project/Chronic Kidney Disease Project/: Disease Detection.ipynb
examples/model_serving_chronic_kidney_disease/chronoc_kidney_disease_project/: Disease Detection.ipynb
pulsar_data_collection/: config.py  models.py  pulse.py
pulsar_data_collection/data_capture/: __init__.py  data_capture.py  exceptions.py
pulsar_data_collection/database_connectors/: database_actions.py  influxdb.py
pulsar_data_collection/db_connectors/influxdb/: config.py  db_connection.py  queries.py
pulsar_data_collection/db_connectors/prometheus/: db_connection.py
pulsar_data_collection/db_connectors/sqlite/: db_connection.py
pulsar_data_collection2/: config.py  data_capture.py  data_models.py  input.py  models.py  pulse.py
pulsar_data_collection2/database/: database_actions.py  influxdb.py
pulsar_data_collection2/database_connectors/: database_actions.py  influxdb.py
tests/: test_influxdb_factory.py  test_ingestion.py  test_pulse.py  test_pulse_influxdb_integration.py
tests/data/raw/: csv_result-chronic_kidney_disease.csv
tests/data/split/: test_data.csv  test_data_json.json  test_data_json_no_class.json  test_data_no_class.csv  test_data_no_class.txt
tests/db/influxdb/: docker-compose.yaml
tests/model/: kidney_disease.pkl
tests/training_script/: Disease Detection.ipynb
