[tool.poetry]
name = "pulsar-data-collection"
version = "0.2.0"
description = "sdk enabling data collection from model serving code for our MPM solution"
authors = [
    "Pulsar team <pulsar@data-rs.io>"
    ]
readme = "README.md"
homepage = "https://github.com/Rocket-Science-Development/pulsar_data_collection"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
influxdb-client = {extras = ["async"], version = "^1.36.1"}
pydantic = "^1.6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
scikit-learn = "^1.1.1"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.1"
pylint = "^2.15.10"
mypy = "^0.991"
bandit = "^1.7.4"
pytest-mock = "^3.10.0"
pytest-docker = "^1.0.1"
python-dotenv = "^1.0.0"


[tool.black]
line-length = 130
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 130
count = true

[tool.bandit]
targets = ["pulsar_data_collection"]
exclude_dirs = ["tests"]

[tool.mypy]
plugins = [ "pydantic.mypy",]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
pythonpath = [".", "pulsar_data_collection", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
